nemu/include/cpu/instr/.err
in_out.h:2:16: error: expected constructor, destructor, or type conversion before '(' token
 make_instr_func(in_b);
                ^
in_out.h:3:16: error: expected constructor, destructor, or type conversion before '(' token
 make_instr_func(in_v);
                ^
in_out.h:4:16: error: expected constructor, destructor, or type conversion before '(' token
 make_instr_func(out_b);
                ^
in_out.h:5:16: error: expected constructor, destructor, or type conversion before '(' token
 make_instr_func(out_v);
                ^
